@@ -24,7 +24,6 @@ import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 public class TradeMenu extends Menu {
@@ -51,7 +50,9 @@ public class TradeMenu extends Menu {
         return InventorySize.LARGE;
     }
 
-    @Override public void onInventoryClick(InventoryClickEvent click) {}
+    @Override public void onInventoryClick(InventoryClickEvent click) {
+        // empty
+    }
 
     @Override
     public @NotNull Map<Integer, ItemStack> getContent() {
@@ -63,7 +64,7 @@ public class TradeMenu extends Menu {
 
         // ITEM ADDER
         String namespaceShellContest = "omc_contest:contest_shell";
-        ItemStack shellContest = CustomItemRegistry.getByName(namespaceShellContest).getBest();
+        ItemStack shellContest = Objects.requireNonNull(CustomItemRegistry.getByName(namespaceShellContest)).getBest();
 
         List<Component> loreInfo = Arrays.asList(
                 Component.text("§7Apprenez en plus sur les Contest !"),
@@ -84,8 +85,7 @@ public class TradeMenu extends Menu {
         }));
 
         List<Map<String, Object>> selectedTrades = contestManager.getTradeSelected(true).stream()
-                .sorted(Comparator.comparing(trade -> (String) trade.get("ress")))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(trade -> (String) trade.get("ress"))).toList();
 
         List<Integer> slotTrade = Arrays.asList(10, 11, 12, 13, 14, 15, 16, 20, 21, 22, 23, 24);
 
@@ -99,16 +99,15 @@ public class TradeMenu extends Menu {
                     Component.text("§e§lCLIQUE-GAUCHE POUR VENDRE UNE FOIS"),
                     Component.text("§e§lSHIFT-CLIQUE-GAUCHE POUR VENDRE TOUTE CETTE RESSOURCE")
             );
-
-            inventory.put(slot, new ItemBuilder(this, m, itemMeta -> {
-                itemMeta.lore(loreTrades);
-            }).setOnClick(inventoryClickEvent -> {
+	        
+	        assert m != null;
+	        inventory.put(slot, new ItemBuilder(this, m, itemMeta -> itemMeta.lore(loreTrades)).setOnClick(inventoryClickEvent -> {
                 if (!CustomItemRegistry.hasItemsAdder()) {
                     MessagesManager.sendMessage(player, Component.text("§cFonctionnalité bloqué. Veuillez contactez l'administration"), Prefix.CONTEST, MessageType.ERROR, true);
                     return;
                 }
 
-                String m1 = String.valueOf(inventoryClickEvent.getCurrentItem().getType());
+                String m1 = String.valueOf(Objects.requireNonNull(inventoryClickEvent.getCurrentItem()).getType());
                 int amount = (int) trade.get("amount");
                 int amountShell = (int) trade.get("amount_shell");
                 ItemStack shellContestItem = CustomStack.getInstance(namespaceShellContest).getItemStack();
@@ -166,7 +165,7 @@ public class TradeMenu extends Menu {
                 } else if (inventoryClickEvent.isLeftClick()) {
                     if (ItemUtils.hasEnoughItems(player, inventoryClickEvent.getCurrentItem().getType(), amount)) {
 
-                        //mettre dans l'inv ou boite mail?
+                        //mettre dans l'inv ou boite mail ?
                         if (Arrays.asList(player.getInventory().getStorageContents()).contains(null)) {
                             shellContestItem.setAmount(amountShell);
                             for (ItemStack item : ItemUtils.splitAmountIntoStack(shellContestItem)) {
@@ -187,9 +186,7 @@ public class TradeMenu extends Menu {
             }));
         }
 
-        inventory.put(27, new ItemBuilder(this, Material.ARROW, itemMeta -> {
-            itemMeta.displayName(Component.text("§r§aRetour"));
-        }).setBackButton());
+        inventory.put(27, new ItemBuilder(this, Material.ARROW, itemMeta -> itemMeta.displayName(Component.text("§r§aRetour"))).setBackButton());
 
         inventory.put(35, new ItemBuilder(this, Material.EMERALD, itemMeta -> {
             itemMeta.displayName(Component.text("§r§aPlus d'info !"));
